--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
 <li><a href="https://www.gov.ukhttp//www.newark-sherwooddc.gov.uk">Newark and Sherwood District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.ne-derbyshire.gov.uk">North East Derbyshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.brent.gov.uk">London Borough of Brent Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lancashire.gov.uk/">Lancashire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.coventry.gov.uk">Coventry City Council</a></li>
 <li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.tamworth.gov.uk">Tamworth Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.uttlesford.gov.uk">Uttlesford District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.lancashire.gov.uk/">Lancashire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.harlow.gov.uk">Harlow District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttp//www.parliament.uk/business/publications/hansard/">Hansard - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/county">Dorset County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
