--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-prince-of-wales-and-the-duchess-of-cornwall-to-visit-saudi-arabia">The Prince of Wales and The Duchess of Cornwall to visit Saudi Arabia </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/mongol-rally--2">Mongol Rally: travel advice for Ukraine</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-english-speaking-union-belarus-public-speaking-competition">The English Speaking Union Belarus Public Speaking Competition</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224845.es-419">La consulta en Crimea</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-david-lidington-visits-poland--2">Minister for Europe David Lidington visits Poland</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--5">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279743.es">Gran Bretaña: 15 historias para 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/doha-college-opens-additional-campus">Doha College opens additional campus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263029.pt">Banco Central e Reino Unido assinam acordo de cooperação</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/275931.es">Un día en la vida de Simon Manley</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/290702.ja">英国による健康保険付加料の導入</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
