--- a/manual/architecture-deep-dive.html
+++ b/manual/architecture-deep-dive.html
@@ -201,7 +201,7 @@
             
   <p><a href='/manual.html#applications'>Applications</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/83e0ea39f5f4b3a8de00f40c416416d6e93a17e2">23 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/3b22e462cbc33d9707e29fd7623f5ec93bba61fe">13 Apr 2021</a>
 </div>
 
  <h1 id='header'>Architectural deep-dive of GOV.UK</h1> <p>We can cover a lot of GOV.UK architecture by asking ourselves three questions:</p>
@@ -279,10 +279,11 @@ storing all known routes in memory using a <a href="https://en.wikipedia.org/wik
 from a MongoDB database of all known routes.</p>
 <p>The MongoDB database is written to via <a href="https://github.com/alphagov/router-api">router-api</a> whenever a route is
 added or changed: the Content Store (which we&rsquo;ll cover later) talks to
-Router API <a href="https://github.com/alphagov/content-store/blob/08f02f990e621c9d2fd473e12a70a6805ddd8dcb/app/models/route_set.rb#L58-L82">directly</a> to do this. Router API then
-<a href="https://github.com/alphagov/router-api/blob/master/lib/router_reloader.rb#L45-L48">sends POST requests to every instance of Router</a>,
-whereupon each <a href="https://github.com/alphagov/router/blob/1e1d5c1563136ba340e1fba838d9b52e283ed815/router_api.go#L26-L42">Router then reloads all routes</a>
-from MongoDB.</p>
+Router API <a href="https://github.com/alphagov/content-store/blob/08f02f990e621c9d2fd473e12a70a6805ddd8dcb/app/models/route_set.rb#L58-L82">directly</a> to do this.</p>
+<p>Every Router instance <a href="https://github.com/alphagov/router/blob/811ed82d0ecc23b8077ed5dd2c460ccdfe2808ab/router.go#L154-L194">polls periodically</a>
+for any changes to the MongoDB database; if and when changes are detected
+by a particular instance it reloads all routes held in memory - a process
+which is repeated across all instances.</p>
 <p>Routes have different handlers. Routes marked as <code>gone</code> return a 410 Gone
 response. Routes marked as <code>redirect</code> serve a 301 Moved Permanently
 response. These handlers are useful for when content is deleted or
