--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
-<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.ne-derbyshire.gov.uk">North East Derbyshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.moneyadviceservice.org.uk/en/categories/managing-debt">Debt management - Money Advice Service</a></li>
-<li><a href="https://www.gov.ukhttp//www.cotswold.gov.uk">Cotswold District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ncsc.gov.uk">National Cyber Security Centre</a></li>
+<li><a href="https://www.gov.ukhttp//www.mendip.gov.uk">Mendip District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.uttlesford.gov.uk">Uttlesford District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.castlereagh.gov.uk">Castlereagh Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
